# Crypto-Summary

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api-keys.md  commands.md  verification_checklist.md
samples/: binance_sample.csv  bitlend.csv  nexo_dnw.csv  nexo_savings.csv  nexo_spot.csv  pbr_lending.csv  universal_sample.csv
samples/bitflyer/: CollateralHistory.csv  ConversionHistory.csv  Lightning_TradeHistory.csv  TradeHistory.csv
samples/gmo/: 2026_trading_report.csv
scripts/: check_gmo_csv.py  check_gmo_missing.py  check_nexo_fees.py
src/crypto_summary/: cli.py
src/crypto_summary.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crypto_summary/core/: ledger.py  models.py  portfolio.py  price_history.py  prices.py  secrets.py
src/crypto_summary/sinks/: cryptact_csv.py  koinly_csv.py  summ_csv.py
src/crypto_summary/sources/: base.py  csv_import.py  nexo.py  nexo_savings.py
src/crypto_summary/web/: __init__.py  app.py  auth.py
tests/: conftest.py  test_arbiscan.py  test_bitflyer.py  test_bitlend.py  test_bybit_api.py  test_cli_account.py  test_cli_add.py  test_cli_remove.py  test_cryptact_export.py  test_etherscan_api.py  test_gmo.py  test_helius_api.py  test_koinly_export.py  test_ledger.py  test_models.py  test_nexo_autodetect.py  test_nexo_savings.py  test_pbr_lending.py  test_pbr_transfers.py  test_portfolio.py  test_portfolio_history_api.py  test_price_history.py  test_prices.py  test_secrets.py  test_solscan_api.py  test_summ_export.py  test_web.py
(+16 files in other folders)
