[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-summary"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "fastapi>=0.110", "uvicorn>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
crypto-summary = "crypto_summary.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crypto_summary = ["web/static/*"]
